linux (4.13~rc4-1~exp1) UNRELEASED; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * cpupower: Add/update definition of MSRHEADER macro for turbostat and
    x86_energy_perf_policy
  * Remove support for upstream DocBook-based documentation, including the
    linux-manual package

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Aug 2017 14:10:41 +0100

linux (4.12.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.3
    -  brcmfmac: fix possible buffer overflow in brcmf_cfg80211_mgmt_tx()
       (CVE-2017-7541)
    - [sparc64] Adding asm-prototypes.h for genksyms to generate crc
    - [sparc64] sed regex in Makefile.build requires line break between
      exported symbols
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.4
    - f2fs: sanity check checkpoint segno and blkoff (CVE-2017-10663)
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.5
    - dentry name snapshots (CVE-2017-7533)
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.12.6
    - saa7164: fix double fetch PCIe access condition (CVE-2017-8831)
    - ipv6: avoid overflow of offset in ip6_find_1stfragopt (CVE-2017-7542)

  [ Ben Hutchings ]
  * media: Enable USB_RAINSHADOW_CEC as module (see #868511)
  * Clean up symbol version fixes for symbols exported from asm
    (fixes FTBFS on sparc64):
    - [alpha] Un-revert "alpha: move exports to actual definitions"
    - [alpha] Restore symbol versions for symbols exported from assembly
    - [m68k] Un-revert "m68k: move exports to definitions"
    - [sparc64] Un-revert "sparc: move exports to definitions"
  * [mips*/octeon] Fix broken EDAC driver (fixes FTBFS)
  * [armhf] Revert "gpu: host1x: Add IOMMU support"
  * [armhf] udeb: Replace imx-ipuv3-crtc with imxdrm in fb-modules
  * [i386] perf tools: Fix unwind build (fixes FTBFS)
  * debian/control: Fix version in dependencies on arch-independent