@@ -14,10 +14,12 @@
 /files
 /hyperv-daemons/
 /libcpupower*/
+/liblockdep*/
 /libusbip-dev/
 /linux-*
 !/linux-cpupower.install
 !/linux-cpupower.manpages
+/lockdep/
 /po/
 /rules.gen
 /stamps/
