@@ -106,3 +106,34 @@ Description: Support daemons for Linux running on Hyper-V
  .
  hv_vss_daemon provides the volume shadow copy service (VSS), allowing
  the host to freeze the guest filesystems while taking a snapshot.
+
+Package: lockdep
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: all
+Depends: ${shlibs:Depends}, ${misc:Depends}, liblockdep@version@
+Recommends: liblockdep-dev
+Section: devel
+Multi-Arch: allowed
+Description: Runtime locking correctness validator
+ lockdep is a wrapper for programs that use the pthreads API, which detects
+ actual and potential deadlocks and other locking bugs.
+
+Package: liblockdep@version@
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Section: libs
+Multi-Arch: same
+Description: Runtime locking correctness validator (shared library)
+ liblockdep is a library for programs that use the pthreads API, which can
+ be used to detect actual and potential deadlocks and other locking bugs.
+
+Package: liblockdep-dev
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}, liblockdep@version@ (= ${binary:Version})
+Section: libdevel
+Multi-Arch: same
+Description: Runtime locking correctness validator (development files)
+ liblockdep is a library for programs that use the pthreads API, which can
+ be used to detect actual and potential deadlocks and other locking bugs.
