@@ -7,6 +7,7 @@ linux (4.13~rc4-1~exp1) UNRELEASED; urgency=medium
     x86_energy_perf_policy
   * Remove support for upstream DocBook-based documentation, including the
     linux-manual package
+  * liblockdep: Re-enable liblockdep packages following upstream fixes
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Aug 2017 14:10:41 +0100
 
